samples/_failures_safe/1761658295_363062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_599d29cb.c: In function ‘main’:
./samples/SAFE/__tmp_599d29cb.c:154:19: error: missing terminating " character
  154 |         if (scanf("%d %d
      |                   ^~~~~~
./samples/SAFE/__tmp_599d29cb.c:154:9: error: expected expression at end of input
  154 |         if (scanf("%d %d
      |         ^~
./samples/SAFE/__tmp_599d29cb.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_599d29cb.c:154:9: error: expected declaration or statement at end of input
